<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/marginAlign"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSearch"
            style="@style/MainButtonStyle"
            app:icon="@drawable/baseline_search_24"
            android:text="@string/search"/>

        <Button
            android:id="@+id/btnMedia"
            style="@style/MainButtonStyle"
            app:icon="@drawable/baseline_library_music_24"
            android:text="@string/media"/>

        <Button
            android:id="@+id/btnSettings"
            style="@style/MainButtonStyle"
            app:icon="@drawable/baseline_settings_24"
            android:text="@string/settings"/>
    </LinearLayout>
</LinearLayout>