<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="track"
            type="com.example.playlistmaker.domain.entities.Track" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.PlayerFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbPlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/baseline_arrow_back_24" />

            <ImageView
                android:id="@+id/ivPlayerPlaceholder"
                app:trackPoster="@{track}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/marginAlignXXLarge"
                android:layout_marginTop="@dimen/marginAlignXLLarge"
                android:contentDescription="@string/app_name"
                android:src="@drawable/placeholder"
                app:layout_constraintBottom_toTopOf="@id/tvPlayerSong"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tbPlayer" />

            <TextView
                android:id="@+id/tvPlayerSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginAlignXXLarge"
                android:layout_marginTop="@dimen/marginAlignXXLarge"
                android:text="@{track.trackName}"
                android:textAppearance="@style/YSMedium22_400"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPlayerPlaceholder"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/tvPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="@dimen/marginAlignXXLarge"
                android:textAppearance="@style/YSMedium14_400"
                android:textColor="?attr/colorOnPrimary"
                android:text="@{track.artistName}"
                tools:text="The Beatles "
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPlayerSong"
                app:layout_constraintBottom_toTopOf="@id/ibStartSong"/>


            <ImageView
                android:id="@+id/ibPlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/playlist_button"
                android:layout_marginStart="@dimen/marginAlignXXLarge"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintBottom_toBottomOf="@id/ibStartSong"
                app:layout_constraintEnd_toStartOf="@id/ibStartSong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ibStartSong" />

            <ImageView
                android:id="@+id/ibStartSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginAlignXXXLarge"
                android:contentDescription="@string/app_name"
                android:src="@drawable/play_button"
                app:layout_constraintEnd_toStartOf="@id/ibAddToFavourite"
                app:layout_constraintStart_toEndOf="@id/ibPlaylist"
                app:layout_constraintTop_toBottomOf="@id/tvPlayerName" />

            <ImageView
                android:id="@+id/ibAddToFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/favourite_button_disabled"
                android:layout_marginEnd="@dimen/marginAlignXXLarge"
                app:layout_constraintBottom_toBottomOf="@id/ibStartSong"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ibStartSong"
                app:layout_constraintTop_toTopOf="@+id/ibStartSong" />

            <TextView
                android:id="@+id/tvSongDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginAlignSmall"
                app:layout_constraintTop_toBottomOf="@id/ibStartSong"
                app:layout_constraintStart_toStartOf="@id/ibStartSong"
                app:layout_constraintEnd_toEndOf="@id/ibStartSong"
                android:textAppearance="@style/YSMedium14_500"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/time_example"/>

            <TextView
                android:id="@+id/tvPlayerDuration"
                android:layout_marginTop="30dp"
                android:text="@string/duration"
                style="@style/PlayerLeftTextStyle"
                app:layout_constraintTag="durationTag"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSongDuration"
                app:layout_constraintEnd_toStartOf="@id/tvDurationValue"/>

            <TextView
                android:id="@+id/tvDurationValue"
                style="@style/PlayerRightTextStyle"
                app:millsToSeconds="@{track}"
                app:layout_constraintBottom_toBottomOf="@+id/tvPlayerDuration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvPlayerDuration"
                app:layout_constraintTop_toTopOf="@id/tvPlayerDuration"
                tools:text="5:35" />

            <TextView
                android:id="@+id/tvAlbum"
                style="@style/PlayerLeftTextStyle"
                android:layout_marginStart="0dp"
                app:textVisibility="@{track.collectionName}"
                android:text="@string/album"
                app:layout_constraintStart_toStartOf="@id/tvPlayerDuration"
                app:layout_constraintTop_toBottomOf="@id/tvPlayerDuration"/>

            <TextView
                android:id="@+id/tvAlbumValue"
                style="@style/PlayerRightTextStyle"
                app:collectionName="@{track.collectionName}"
                android:layout_marginStart="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="@+id/tvAlbum"
                app:layout_constraintStart_toEndOf="@id/playerBarrier"
                app:layout_constraintTop_toTopOf="@id/tvAlbum"
                tools:text="Yesterday" />

            <TextView
                android:id="@+id/tvYear"
                style="@style/PlayerLeftTextStyle"
                app:textVisibility="@{track.releaseDate}"
                android:text="@string/year"
                app:layout_constraintTop_toBottomOf="@id/tvAlbum"
                app:layout_constraintEnd_toStartOf="@id/tvYearValue"/>

            <TextView
                android:id="@+id/tvYearValue"
                style="@style/PlayerRightTextStyle"
                app:trackYear="@{track.releaseDate}"
                app:layout_constraintBottom_toBottomOf="@+id/tvYear"
                app:layout_constraintStart_toEndOf="@id/tvYear"
                app:layout_constraintTop_toTopOf="@id/tvYear"
                tools:text="1964" />

            <TextView
                android:id="@+id/tvGenre"
                style="@style/PlayerLeftTextStyle"
                android:text="@string/genre"
                app:layout_constraintTop_toBottomOf="@id/tvYear"
                app:layout_constraintEnd_toStartOf="@id/tvGenreValue" />

            <TextView
                android:id="@+id/tvGenreValue"
                style="@style/PlayerRightTextStyle"
                android:text="@{track.primaryGenreName}"
                app:layout_constraintBottom_toBottomOf="@+id/tvGenre"
                app:layout_constraintStart_toEndOf="@id/tvGenre"
                app:layout_constraintTop_toTopOf="@id/tvGenre"
                tools:text="Rock" />

            <TextView
                android:id="@+id/tvCountry"
                style="@style/PlayerLeftTextStyle"
                android:text="@string/country"
                app:layout_constraintTop_toBottomOf="@id/tvGenre"
                app:layout_constraintEnd_toStartOf="@id/tvCountryValue"/>

            <TextView
                android:id="@+id/tvCountryValue"
                style="@style/PlayerRightTextStyle"
                android:text="@{track.country}"
                app:layout_constraintBottom_toBottomOf="@+id/tvCountry"
                app:layout_constraintStart_toEndOf="@id/tvCountry"
                app:layout_constraintTop_toTopOf="@id/tvCountry"
                tools:text="Great Britain" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/playerBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_tags="durationTag"
                app:barrierDirection="end" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>